# LangGraphAgent_v3.2-chainlit-

./: .env  .gitignore  README.md  chainlit.md  chainlit_app.py  llm_loader.py  main.py  mcp_loader.py  ollama_adapter.py  pyproject.toml  sqlite_data_layer.py  修复报告.md
.chainlit/: config.toml
config/: llm_config.json  mcp_config.json  persistence_config.json
data/: agent_data.db  agent_memory.db  agent_memory.db-shm  agent_memory.db-wal  chainlit_history.db
docs/: Chainlit前端集成.md  Chainlit集成修复报告.md  Implementation_Roadmap.md  LangGraph_Agent_Chat_UI_vs_Chainlit_详细对比分析报告.md  LangGraph_Research_Report.md  Model_Provider_Analysis.md  Research_Completion_Summary.md  Research_Summary.md  SESSION_MANAGEMENT_GUIDE.md  WoodenFish_Analysis_Report.md  fix_summary_report.md  开发者项目交接指导书.md  持久化功能修复总结.md  数据库文件分析报告.md  数据库清理完成报告.md  数据库清理指南.md  新建会话创建和历史会话删除功能问题解决复盘报告.md  普通用户项目交接指导书.md  记忆架构说明.md  运行过程示例 2.md  项目交接完成总结.md  项目优化改进建议报告.md  项目迁移指南.md
litellm-backup/: LiteLLM_config.json  config.yaml
scripts/: check_database_status.py  cleanup_databases.py  clear_history_data.py  quick_clean.py  verify_project_structure.py
tests/: check_database_conflicts.py  check_db_status.py  check_persistence_backend.py  check_specific_thread.py  check_thread_details.py  clean_duplicate_messages.py  debug_resume_issue.py  debug_step_data.py  final_success_verification.py  fix_database_conflicts.py  monitor_database_changes.py  simple_delete_monitor.py  test_agent_initialization.py  test_auth_debug.py  test_chainlit.py  test_chainlit_fixes.py  test_complete_functionality.py  (+18 more)
(+10 files in other folders)
